<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="290dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/universidad_de_alicante" />
    <TextView
        android:id="@+id/universidad_alicante_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="16dp"
        android:text="@string/universidad_de_alicante"/>

    <TextView
        android:id="@+id/about_text"
        android:layout_width="match_parent"
        android:padding="16dp"
        android:textSize="16sp"
        android:layout_height="177dp"
        android:gravity="center_horizontal"
        android:text="@string/about_text_view" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/principal_activity_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/principal_page" />

        <Button
            android:id="@+id/login_activity_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login_activity" />
    </LinearLayout>

</LinearLayout>